# lsh

./: CMakeLists.txt  README.md  Отчет.md  Промежуточный отчет  Промежуточный отчет.md
etc/: hamming.py  ls-sample.ipynb  sample.ipynb  stub_data_generator.py  stub_result  stub_test_data  stub_train_data  test_hamming.py  test_l1.py
include/: binarystring.h  hamming.h  integerstring.h  lsh.h
src/: binarystring.cpp  dense_binarystring.cpp  dense_integerstring.cpp  hamming.cpp  hashed_sparse_binarystring.cpp  hashed_sparse_integerstring.cpp  integerstring.cpp  krnn.cpp  lsh.cpp  lsh_demo.cpp  sparse_binarystring.cpp  sparse_integerstring.cpp
test/: approximate_rnn_test.cpp  dense_binarystring_test.cpp  dense_integerstring_test.cpp  hamming_test.cpp  hamminghash_test.cpp  hammingstore_test.cpp  hashed_bstr_reader_test.cpp  hashed_sparse_binarystring_test.cpp  hashed_sparse_integerstring_test.cpp  hashgroup_test.cpp  sample_in_file  sample_in_file_l1  sparse_binarystring_test.cpp  sparse_integerstring_test.cpp
